// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`body1 is regular 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#2e2e2e",
          "fontFamily": "IBMPlexSans",
          "fontSize": 17,
          "lineHeight": 24,
        },
        Object {
          "writingDirection": "ltr",
        },
        undefined,
      ]
    }
  >
    body1
  </Text>
</View>
`;

exports[`headline1 is large and bold 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#1f2c9b",
          "fontFamily": "IBMPlexSans-Bold",
          "fontSize": 52,
          "fontWeight": "500",
          "lineHeight": 50,
        },
        Object {
          "writingDirection": "ltr",
        },
        undefined,
      ]
    }
  >
    headline1
  </Text>
</View>
`;
